# XSUI

./: ..pre-commit-config.yaml.un~  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml~  README.md  pyproject.toml
XSUI/: __init__.py  __main__.py
XSUI/detectors/: __init__.py
XSUI/detectors/au/: __init__.py
XSUI/detectors/au/AusSync/: saxs_waxs.py
XSUI/examples/: pyfai_usage.ipynb
XSUI/experiment/: config_base.py  config_giwaxs.py
XSUI/geometry/: poni.py
XSUI/webapp/dash/: main.py
XSUI/webapp/dash/callbacks/: __init__.py  callback_calibration.py
XSUI/webapp/dash/models/: __init__.py  images.py  masks.py
XSUI/webapp/dash/tabs/: __init__.py  calibration.py  giwaxs.py  waxs.py
XSUI/webapp/fastapi/: main.py
XSUI/webapp/fastapi/dash_tabs/: calibration.py  dash_main.py
XSUI/webapp/fastapi/models/: __init__.py  images.py  masks.py
